보안 첫단계 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,6 @@ spring:
       enabled: true
     livereload:
       enabled: true
+
+firebase:
+  config-path: firebase/firebase-service-account.json
